--- a/demo/searchapp/index.html
+++ b/demo/searchapp/index.html
@@ -4,7 +4,7 @@
     <title>BlooM25 Search</title>
 	<!-- <link rel="icon" href="ea_image.png" type="image/x-icon"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/6pac/SlickGrid/dist/styles/css/slick-alpine-theme.css" type="text/css"/>
-	<link rel="stylesheet" href="osm_style.css" />
+	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div id="search_section">
