--- a/demo/searchapp/index.html
+++ b/demo/searchapp/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="search_section">
-		<h1>Entity Resolution Search</h1>
+		<h1>BlooM25 Search</h1>
 
 		<br><br><br><br>
 
